--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "devDependencies": {
     "express": "*",
-    "jade": "*",
-    "connect-form": "*"
+    "jade": "*"
   },
   "main": "./dist/framejax.js",
   "keywords": ["ender", "iframe", "ajax", "upload"]
